# C-FinalProject-LibraryManagementSystem

./: AccountTypeEnum.cpp  AccountTypeEnum.h  Accounts.cpp  Accounts.h  Book.cpp  Book.h  Books.txt  CMakeLists.txt  FileHandler.cpp  FileHandler.h  Library.cpp  Library.h  Library.txt  Magazine.cpp  Magazine.h  Magazines.txt  RegisteredAccounts.txt  TEST PLANS FOR LIBRARY MANAGEMENT SYSTEM FINAL PROJECT (1).docx  Updated Test Plans 2.docx  Updated Test Plans.docx  main.cpp
